# scopefun-software

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindLibUSB.cmake
doc/: FPGA Control Memory.fods  compile_mac.odt  compile_ubuntu.odt  compile_win_codeblocks.odt  compile_win_visualstudio.odt  information.md
doc/configuration/: AnalogInputScaling.ods  Calibration.ods  ConfigData.ods  DigitalOutputControl.ods  FrameDataNew.ods  Timebase.ods
lib/cJSON/: cJSON.c  test.c
lib/kiss_fft130/: CHANGELOG  README  README.simd  TIPS
lib/kiss_fft130/test/: benchfftw.c  doit.c  fft.py  mk_test.py  pstats.c  tailscrap.m  test_real.c  testcpp.cc  testkiss.py  twotonetest.c
lib/kiss_fft130/tools/: kfc.h  kiss_fastfir.c  kiss_fftndr.c
lib/libusb-1.0.20/examples/: ezusb.h
license/: README.TXT  README.odt
package/batch/: linux-package-exe.sh  linux-package-source.sh  win-package-exe32.bat  win-package-exe64.bat  win-package-source.bat  win-sha.bat  win-version.bat
package/scopefun-linux/DEBIAN/: control  control64
package/scopefun-linux/usr/share/applications/: oscilloscope.desktop
package/scopefun-linux/usr/share/doc/scopefun-linux/: changelog  copyright
package/scopefun-mac/: scopefun32.pkgproj  scopefun64.pkgproj
package/scopefun-win/: innosetup.iss
resources/data/about/: version.txt
resources/data/callibrate/: callibrate.slot
resources/data/firmware/: fx2.hex
resources/data/font/: test_0.dds
resources/data/shader21/shadow/: cooling.ps  cooling.vs  line3d.ps
resources/data/shader32/canvas/: canvas2D.vs  canvas3D.ps  canvas3D.vs
resources/data/shader32/shadow/: color.vs
resources/data/signal/: custom.signal
resources/data/startup/: settings.json
resources/driver/: 51-scopefun.rules
resources/driver/x64/: ScopeFun_x64.inf
resources/driver/x86/: ScopeFun-NoEEProm_x86.inf  ScopeFun_x86.inf
resources/locale/de/LC_MESSAGES/: oscilloscope.mo
resources/locale/es/LC_MESSAGES/: oscilloscope.mo
resources/locale/it/LC_MESSAGES/: oscilloscope.mo
resources/locale/sl/LC_MESSAGES/: oscilloscope.mo
resources/translate/: en.po  fr.po
source/core/: core.cpp  core.h
source/core/data/: map.h  set.h
source/core/file/: file.cpp  file.h
source/core/format/: format.cpp  format.h
source/core/global/: platform.h
source/core/input/: input.cpp
source/core/libusb/: ezusb.c  ezusb.h  libusb.cpp  libusb.h
source/core/math/: interval.h  matrix4x4.h
source/core/memory/: memory.cpp
source/core/opengl/: opengl.h  opengl_devicestate.cpp  opengl_devicestate.h  opengl_shader.cpp  opengl_staticmesh.cpp  opengl_staticmesh.h  opengl_texture.cpp
source/core/render/camera/: camera.cpp
source/core/render/canvas/: canvas2d.cpp  canvas2d.h  canvas3d.h
source/core/render/font/: font.cpp
source/core/string/: corestring.cpp  corestring.h
source/license/: source.cpp
source/osciloscope/: osciloscope.cpp
source/osciloscope/gui/: OsciloskopDebug.h  OsciloskopDisplay.cpp  OsciloskopDisplay.h  OsciloskopHardwareGenerator.cpp  OsciloskopHardwareGenerator.h  OsciloskopInfo.cpp  OsciloskopInfo.h  OsciloskopMeasure.h  OsciloskopOsciloskop.cpp  OsciloskopOsciloskop.h  OsciloskopSoftwareGenerator.cpp  OsciloskopSoftwareGenerator.h  OsciloskopThermal.cpp  OsciloskopThermal.h  guiheader.h  osc.cpp  osc.h  osciloskop.fbp
source/osciloscope/osciloscope/: oscfft.cpp  oscfile.cpp  oscfile.h  oscmng.cpp  oscrender.h  oscsignal.cpp  oscsignal.h
source/osciloscope/window/: tool.cpp  tool.h  wndgenerate.h  wndmain.cpp  wndmain.h  wndshadow.cpp
source/osciloscope/xpm/: xpm128.c  xpm256.c  xpm32.c  xpm512.c  xpm64.c
src/core/data/: array.h  ring.h
src/core/flag/: flag.h
src/core/global/: endian.h  macro.h  type.h
src/core/input/: input.cpp  input.h
src/core/libusb/: libusb.cpp
src/core/manager/: manager.cpp  manager.h
src/core/math/: const.h  vector4.h
src/core/memory/: memory.h
src/core/opengl/: opengl.cpp  opengl_device.cpp  opengl_device.h  opengl_shader.h  opengl_texture.cpp  opengl_texture.h
src/core/render/camera/: camera.h
src/core/render/canvas/: canvas3d.cpp
src/core/render/font/: font.h
src/core/render/render/: render.cpp  render.h
src/core/string/: corestring.cpp
src/core/timer/: timer.cpp  timer.h
src/license/: source.cpp
src/osciloscope/: osciloscope.h
src/osciloscope/app/: app.cpp  managers.cpp
src/osciloscope/gui/: OsciloskopDebug.cpp  OsciloskopDisplay.cpp  OsciloskopDisplay.h  OsciloskopMeasure.cpp  OsciloskopSoftwareGenerator.h  OsciloskopThermal.cpp  osc.cpp  osc.h  osciloskop.fbp
src/osciloscope/osciloscope/: oscfft.h  oscmng.cpp  oscmng.h  oscrender.cpp  oscsettings.cpp  oscsettings.h
src/osciloscope/rc/: osc.rc
src/osciloscope/window/: wnddisplay.cpp  wnddisplay.h  wndgenerate.cpp  wndshadow.h
src/osciloscope/xpm/: xpm16.c  xpm96.c
